syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message FightPropPair {
	uint32 prop_type = 1;
	float prop_value = 2;
}
