syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

enum VisionType {
	VISION_TYPE_NONE = 0;
	VISION_TYPE_MEET = 1;
	VISION_TYPE_REBORN = 2;
	VISION_TYPE_REPLACE = 3;
	VISION_TYPE_WAYPOINT_REBORN = 4;
	VISION_TYPE_MISS = 5;
	VISION_TYPE_DIE = 6;
	VISION_TYPE_GATHER_ESCAPE = 7;
	VISION_TYPE_REFRESH = 8;
	VISION_TYPE_TRANSPORT = 9;
	VISION_TYPE_REPLACE_DIE = 10;
	VISION_TYPE_REPLACE_NO_NOTIFY = 11;
	VISION_TYPE_BORN = 12;
	VISION_TYPE_PICKUP = 13;
	VISION_TYPE_REMOVE = 14;
	VISION_TYPE_CHANGE_COSTUME = 15;
	VISION_TYPE_FISH_REFRESH = 16;
	VISION_TYPE_FISH_BIG_SHOCK = 17;
	VISION_TYPE_FISH_QTE_SUCC = 18;
	VISION_TYPE_EPFKMOIPADB = 19;
}
